# Regulatory-Repository

./: .build_report.txt  .gitignore  .pull_report.txt  .tag_report.txt  README.md  TODO.md  base.md  discovered_vocabulary.yaml  pyproject.toml  requirements.txt  tag_aliases.yaml  taxonomy.yaml
.claude/: settings.local.json
.playwright-mcp/: lsInfoR-sample.txt  page-2026-05-23T14-53-10-947Z.yml  page-2026-05-23T14-54-08-118Z.yml  page-2026-05-23T14-54-31-833Z.yml  page-2026-05-23T14-55-29-181Z.yml  page-2026-05-23T14-56-45-250Z.yml  page-2026-05-23T14-57-00-762Z.yml  page-2026-06-01T20-06-01-150Z.yml  page-2026-06-01T20-20-09-154Z.yml  page-2026-06-01T20-20-46-287Z.yml
assets/: app.js  styles.css
connectors/: _common.py  au_legislation.py  brazil.py  china.py  ecfr.py  egov_jp.py  eurlex.py  gulf.py  india.py  justice_ca.py  law_go_kr.py  unece.py
cross-agent-review/: regulatory-repository-ui-ux-final-plan.md  regulatory-repository-ui-ux-implementation-plan.md  regulatory-repository-ui-ux-review-counter-proposal.md  regulatory-repository-ui-ux-review-plan.md
docs/: index-content-review.md  regulatory_capture_gap_report_2026-06-01.md
manifests/: au.yaml  br.yaml  ca.yaml  cn.yaml  ece.yaml  eu.yaml  gcc.yaml  in.yaml  jp.yaml  kr.yaml  spreadsheet.yaml  us.yaml
prompts/: tag_classifier.md
reference/: passenger_vehicle_regulatory_reference_repository_v3_cleaned.xlsx
regulations/: ar-workbook-reg-0624-lcm-lca.md  asean-workbook-reg-0615-asean-automotive-products-mutual-recognition-arrangement-apmra.md  au-f2005l03523.md  au-f2005l03873.md  au-f2005l03907.md  (+723 more)
(+128 files in other folders)
